--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.rsreu.gorkin.codeanalyzer</groupId>
-    <artifactId>core</artifactId>
+    <artifactId>codeanalyzer-complete-solution</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>desktop</module>
+        <module>core</module>
+    </modules>
 
-    <name>core</name>
+    <name>complete</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
