--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -15,6 +15,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.34.0</version>
+        </dependency>
+        <dependency>
             <groupId>ru.rsreu.gorkin.codeanalyzer</groupId>
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -26,16 +31,47 @@
         </dependency>
     </dependencies>
 
+
     <build>
         <pluginManagement>
             <plugins>
+
+<!--                <plugin>-->
+<!--                    <groupId>org.dstovall</groupId>-->
+<!--                    <artifactId>onejar-maven-plugin</artifactId>-->
+<!--                    <version>1.3.0</version>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <configuration>-->
+<!--                                <mainClass>com.company.MainClass</mainClass>-->
+<!--                            </configuration>-->
+<!--                            <goals>-->
+<!--                                <goal>one-jar</goal>-->
+<!--                            </goals>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                </plugin>-->
+
+                <!--                <plugin>-->
+<!--                    <groupId>org.apache.maven.plugins</groupId>-->
+<!--                    <artifactId>maven-shade-plugin</artifactId>-->
+<!--                    <executions>-->
+<!--                        <execution>-->
+<!--                            <phase>package</phase>-->
+<!--                            <goals>-->
+<!--                                <goal>shade</goal>-->
+<!--                            </goals>-->
+<!--                        </execution>-->
+<!--                    </executions>-->
+<!--                </plugin>-->
+
                 <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.0.2</version>
                     <configuration>
                         <archive>
                             <manifest>
-                                <mainClass>ru.rsreu.gorkin.codeanalyzer.desktop.App</mainClass>
+                                <mainClass>ru.rsreu.gorkin.codeanalyzer.desktop.SwingApp</mainClass>
                             </manifest>
                         </archive>
                     </configuration>
