--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <version>3.16.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.12.2</version>
+        </dependency>
     </dependencies>
 
 
