--- a/desktop/pom.xml
+++ b/desktop/pom.xml
@@ -20,11 +20,6 @@
             <version>1.0</version>
         </dependency>
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.34.0</version>
-        </dependency>
-        <dependency>
             <groupId>ru.rsreu.gorkin.codeanalyzer</groupId>
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -39,6 +34,15 @@
             <artifactId>poi</artifactId>
             <version>4.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>forms_rt</artifactId>
+            <version>7.0.3</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
 
@@ -75,13 +79,14 @@
 <!--                    </executions>-->
 <!--                </plugin>-->
 
+
                 <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.0.2</version>
                     <configuration>
                         <archive>
                             <manifest>
-                                <mainClass>ru.rsreu.gorkin.codeanalyzer.desktop.SwingApp</mainClass>
+                                <mainClass>ru.rsreu.gorkin.codeanalyzer.desktop.App</mainClass>
                             </manifest>
                         </archive>
                     </configuration>
@@ -90,6 +95,49 @@
         </pluginManagement>
         <plugins>
             <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>ru.rsreu.gorkin.codeanalyzer.desktop.App</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
+
+<!--            <plugin>-->
+<!--                <groupId>org.codehaus.mojo</groupId>-->
+<!--                <artifactId>ideauidesigner-maven-plugin</artifactId>-->
+<!--                <version>1.0-beta-1</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>javac2</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+
+<!--                <configuration>-->
+<!--                    <fork>true</fork>-->
+<!--                    <debug>true</debug>-->
+<!--                    <failOnError>true</failOnError>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+
+
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
@@ -97,6 +145,7 @@
                     <target>11</target>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 </project>
